Fix responsive issue for mobile

--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
                 <div class="card">
                     <div class="card-header" id="headingOne">
                         <div class="row">
-                            <div class="col-8">
+                            <div class="col-md-8">
                                 <h5 class="mb-0">
                                     <button class="btn btn-link collapsed collapse-header" data-toggle="collapse"
                                             data-target="#collapseOne"
@@ -490,7 +490,7 @@
                                     </button>
                                 </h5>
                             </div>
-                            <div class="col-4 float-right">
+                            <div class="col-md-4 float-right">
                                 <h5 class="mb-0 float-right">
                                     <button class="btn btn-link collapsed collapse-header right" data-toggle="collapse"
                                             data-target="#collapseOne"
@@ -517,7 +517,7 @@
                 <div class="card">
                     <div class="card-header" id="headingTwo">
                         <div class="row">
-                            <div class="col-8">
+                            <div class="col-md-8">
                                 <h5 class="mb-0">
                                     <button class="btn btn-link collapsed collapse-header" data-toggle="collapse"
                                             data-target="#collapseTwo"
@@ -526,7 +526,7 @@
                                     </button>
                                 </h5>
                             </div>
-                            <div class="col-4 float-right">
+                            <div class="col-md-4 float-right">
                                 <h5 class="mb-0 float-right">
                                     <button class="btn btn-link collapsed collapse-header right" data-toggle="collapse"
                                             data-target="#collapseTwo"
@@ -551,7 +551,7 @@
                 <div class="card">
                     <div class="card-header" id="headingThree">
                         <div class="row">
-                            <div class="col-8">
+                            <div class="col-lg-8">
                                 <h5 class="mb-0">
                                     <button class="btn btn-link collapsed collapse-header" data-toggle="collapse"
                                             data-target="#collapseThree"
@@ -560,7 +560,7 @@
                                     </button>
                                 </h5>
                             </div>
-                            <div class="col-4 float-right">
+                            <div class="col-lg-4 float-right">
                                 <h5 class="mb-0 float-right">
                                     <button class="btn btn-link collapsed collapse-header right" data-toggle="collapse"
                                             data-target="#collapseThree"
@@ -582,6 +582,39 @@
                             <a href="https://www.youtube.com/watch?v=dKAEZp5iEoc" target="_blank">Youtube Video</a>
                             <p></p>
                             <a href="https://github.com/asheeshcric/robocon2018" target="_blank">See Project</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-header" id="headingFour">
+                        <div class="row">
+                            <div class="col-md-8">
+                                <h5 class="mb-0">
+                                    <button class="btn btn-link collapsed collapse-header" data-toggle="collapse"
+                                            data-target="#collapseFour"
+                                            aria-expanded="false" aria-controls="collapseFour">
+                                        Currency Predictor
+                                    </button>
+                                </h5>
+                            </div>
+                            <div class="col-md-4 float-right">
+                                <h5 class="mb-0 float-right">
+                                    <button class="btn btn-link collapsed collapse-header right" data-toggle="collapse"
+                                            data-target="#collapseFour"
+                                            aria-expanded="false" aria-controls="collapseFour">
+                                        Feb 2018
+                                    </button>
+                                </h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
+                        <div class="card-body">
+                            Currency Predictor is a Django web application build to learn time series that shows the
+                            history of prices for different cryptocurrencies and also predicts their prices in the near
+                            future.
+                            <p></p>
+                            <a href="https://github.com/asheeshcric/currencypredictor" target="_blank">See Project</a>
                         </div>
                     </div>
                 </div>
