--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
                                     <button class="btn btn-link collapsed collapse-header right" data-toggle="collapse"
                                             data-target="#collapseOne"
                                             aria-expanded="false" aria-controls="collapseOne">
-                                        July 2018
+                                        Jul 2018
                                     </button>
                                 </h5>
                             </div>
@@ -531,7 +531,7 @@
                                     <button class="btn btn-link collapsed collapse-header right" data-toggle="collapse"
                                             data-target="#collapseTwo"
                                             aria-expanded="false" aria-controls="collapseTwo">
-                                        Jan 2018 - August 2018
+                                        Jan 2018 - Aug 2018
                                     </button>
                                 </h5>
                             </div>
@@ -619,7 +619,74 @@
                     </div>
                 </div>
             </div>
+            <div class="card">
+                <div class="card-header" id="headingFive">
+                    <div class="row">
+                        <div class="col-md-8">
+                            <h5 class="mb-0">
+                                <button class="btn btn-link collapsed collapse-header" data-toggle="collapse"
+                                        data-target="#collapseFive"
+                                        aria-expanded="false" aria-controls="collapseFive">
+                                    Industrial Robotic Arm
+                                </button>
+                            </h5>
+                        </div>
+                        <div class="col-md-4 float-right">
+                            <h5 class="mb-0 float-right">
+                                <button class="btn btn-link collapsed collapse-header right" data-toggle="collapse"
+                                        data-target="#collapseFive"
+                                        aria-expanded="false" aria-controls="collapseFive">
+                                    Mar 2017 – Jul 2017
+                                </button>
+                            </h5>
+                        </div>
+                    </div>
+                </div>
+                <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordion">
+                    <div class="card-body">
+                        Robotic Arm powered with record-and-play feature was a college project in my junior year. The
+                        arm was Arduino driven and controlled with servo motors. The precision of each axis movement was
+                        +- 2 cm. The project was intended as a prototype for industrial chores.
+                        <p></p>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header" id="headingSix">
+                    <div class="row">
+                        <div class="col-md-8">
+                            <h5 class="mb-0">
+                                <button class="btn btn-link collapsed collapse-header" data-toggle="collapse"
+                                        data-target="#collapseFive"
+                                        aria-expanded="false" aria-controls="collapseSix">
+                                    Hexacopter
+                                </button>
+                            </h5>
+                        </div>
+                        <div class="col-md-4 float-right">
+                            <h5 class="mb-0 float-right">
+                                <button class="btn btn-link collapsed collapse-header right" data-toggle="collapse"
+                                        data-target="#collapseSix"
+                                        aria-expanded="false" aria-controls="collapseSix">
+                                    Sep 2016 – Dec 2016
+                                </button>
+                            </h5>
+                        </div>
+                    </div>
+                </div>
+                <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordion">
+                    <div class="card-body">
+                        With three other fellow computer scientists, we were able to build a hexacopter by customizing
+                        our own flight-controller named Hobbyking KK2. Hobbyking KK2 was intended as a prototype for the
+                        farmers that could empower them to sprinkle pesticides and monitor their crops remotely.
 
+                        With this project, we later participated in an international drone competition "KrishakCopter"
+                        and were the only finalist from Nepal.
+                        <p></p>
+                        <a href="https://www.youtube.com/watch?v=FR3nwhzwqbs&t=12s" target="_blank">See Project</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
