Add youtube video for Robotic Arm

--- a/index.html
+++ b/index.html
@@ -648,6 +648,7 @@
                         arm was Arduino driven and controlled with servo motors. The precision of each axis movement was
                         +- 2 cm. The project was intended as a prototype for industrial chores.
                         <p></p>
+                        <a href="https://youtu.be/LrA9e9pcx4M" target="_blank">See Project</a>
                     </div>
                 </div>
             </div>
