Fix collapse header for sixth project

--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@
                         <div class="col-md-8">
                             <h5 class="mb-0">
                                 <button class="btn btn-link collapsed collapse-header" data-toggle="collapse"
-                                        data-target="#collapseFive"
+                                        data-target="#collapseSix"
                                         aria-expanded="false" aria-controls="collapseSix">
                                     Hexacopter
                                 </button>
