Do not show the first collapse by default for projects

--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
                         </div>
                     </div>
 
-                    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+                    <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                         <div class="card-body">
                             With an intention to score high in the GRE (Graduate Record Examination), I focused on
                             building something that could help
