Fix issue with the accordion not closing for the last one

--- a/index.html
+++ b/index.html
@@ -618,73 +618,78 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="card">
-                <div class="card-header" id="headingFive">
-                    <div class="row">
-                        <div class="col-md-8">
-                            <h5 class="mb-0">
-                                <button class="btn btn-link collapsed collapse-header" data-toggle="collapse"
-                                        data-target="#collapseFive"
-                                        aria-expanded="false" aria-controls="collapseFive">
-                                    Industrial Robotic Arm
-                                </button>
-                            </h5>
+                <div class="card">
+                    <div class="card-header" id="headingFive">
+                        <div class="row">
+                            <div class="col-md-8">
+                                <h5 class="mb-0">
+                                    <button class="btn btn-link collapsed collapse-header" data-toggle="collapse"
+                                            data-target="#collapseFive"
+                                            aria-expanded="false" aria-controls="collapseFive">
+                                        Industrial Robotic Arm
+                                    </button>
+                                </h5>
+                            </div>
+                            <div class="col-md-4 float-right">
+                                <h5 class="mb-0 float-right">
+                                    <button class="btn btn-link collapsed collapse-header right" data-toggle="collapse"
+                                            data-target="#collapseFive"
+                                            aria-expanded="false" aria-controls="collapseFive">
+                                        Mar 2017 – Jul 2017
+                                    </button>
+                                </h5>
+                            </div>
                         </div>
-                        <div class="col-md-4 float-right">
-                            <h5 class="mb-0 float-right">
-                                <button class="btn btn-link collapsed collapse-header right" data-toggle="collapse"
-                                        data-target="#collapseFive"
-                                        aria-expanded="false" aria-controls="collapseFive">
-                                    Mar 2017 – Jul 2017
-                                </button>
-                            </h5>
+                    </div>
+                    <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordion">
+                        <div class="card-body">
+                            Robotic Arm powered with record-and-play feature was a college project in my junior year.
+                            The
+                            arm was Arduino driven and controlled with servo motors. The precision of each axis movement
+                            was
+                            +- 2 cm. The project was intended as a prototype for industrial chores.
+                            <p></p>
+                            <a href="https://youtu.be/LrA9e9pcx4M" target="_blank">See Project</a>
                         </div>
                     </div>
                 </div>
-                <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordion">
-                    <div class="card-body">
-                        Robotic Arm powered with record-and-play feature was a college project in my junior year. The
-                        arm was Arduino driven and controlled with servo motors. The precision of each axis movement was
-                        +- 2 cm. The project was intended as a prototype for industrial chores.
-                        <p></p>
-                        <a href="https://youtu.be/LrA9e9pcx4M" target="_blank">See Project</a>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-header" id="headingSix">
-                    <div class="row">
-                        <div class="col-md-8">
-                            <h5 class="mb-0">
-                                <button class="btn btn-link collapsed collapse-header" data-toggle="collapse"
-                                        data-target="#collapseSix"
-                                        aria-expanded="false" aria-controls="collapseSix">
-                                    Hexacopter
-                                </button>
-                            </h5>
-                        </div>
-                        <div class="col-md-4 float-right">
-                            <h5 class="mb-0 float-right">
-                                <button class="btn btn-link collapsed collapse-header right" data-toggle="collapse"
-                                        data-target="#collapseSix"
-                                        aria-expanded="false" aria-controls="collapseSix">
-                                    Sep 2016 – Dec 2016
-                                </button>
-                            </h5>
+                <div class="card">
+                    <div class="card-header" id="headingSix">
+                        <div class="row">
+                            <div class="col-md-8">
+                                <h5 class="mb-0">
+                                    <button class="btn btn-link collapsed collapse-header" data-toggle="collapse"
+                                            data-target="#collapseSix"
+                                            aria-expanded="false" aria-controls="collapseSix">
+                                        Hexacopter
+                                    </button>
+                                </h5>
+                            </div>
+                            <div class="col-md-4 float-right">
+                                <h5 class="mb-0 float-right">
+                                    <button class="btn btn-link collapsed collapse-header right" data-toggle="collapse"
+                                            data-target="#collapseSix"
+                                            aria-expanded="false" aria-controls="collapseSix">
+                                        Sep 2016 – Dec 2016
+                                    </button>
+                                </h5>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordion">
-                    <div class="card-body">
-                        With three other fellow computer scientists, we were able to build a hexacopter by customizing
-                        our own flight-controller named Hobbyking KK2. Hobbyking KK2 was intended as a prototype for the
-                        farmers that could empower them to sprinkle pesticides and monitor their crops remotely.
+                    <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordion">
+                        <div class="card-body">
+                            With three other fellow computer scientists, we were able to build a hexacopter by
+                            customizing
+                            our own flight-controller named Hobbyking KK2. Hobbyking KK2 was intended as a prototype for
+                            the
+                            farmers that could empower them to sprinkle pesticides and monitor their crops remotely.
 
-                        With this project, we later participated in an international drone competition "KrishakCopter"
-                        and were the only finalist from Nepal.
-                        <p></p>
-                        <a href="https://www.youtube.com/watch?v=FR3nwhzwqbs&t=12s" target="_blank">See Project</a>
+                            With this project, we later participated in an international drone competition
+                            "KrishakCopter"
+                            and were the only finalist from Nepal.
+                            <p></p>
+                            <a href="https://www.youtube.com/watch?v=FR3nwhzwqbs&t=12s" target="_blank">See Project</a>
+                        </div>
                     </div>
                 </div>
             </div>
