--- a/index.html
+++ b/index.html
@@ -100,14 +100,10 @@
                 <a href="mailto:ashiz2013@gmail.com">ashiz2013@gmail.com</a>
             </div>
             <p class="mb-5">
-                I recently earned my Bachelor's degree focused in Electronics & Computer Engineering from Kathmandu
-                Engineering College. I have been working as a Software Engineer at Insight Workshop, Kathmandu for a
-                year now.
+                I recently earned my Bachelor's degree focused in Electronics & Communication Engineering from Kathmandu Engineering College. I have been working as a Software Engineer at Insight Workshop for a year now.
             </p>
             <p>
-                I am someone who likes to mix life with technology, with a passion to instigate exceptional outcome(s).
-                Manipulating an image to create results that can help in improving someone's health or programming
-                efficient robots to accomplish application-specific tasks; these domains really excite me as a person.
+                I believe in blending existence with innovation with vitality to impel striking results. It might be filtering an image that can help in enhancing someone's wellbeing or programming efficient robots to accomplish application-explicit tasks; these domains really excite me as a person.
             </p>
             <ul class="list-inline list-social-icons mb-0">
                 <li class="list-inline-item">
