Change introduction line

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
             <p class="mb-5">
                 I recently earned my Bachelor's degree focused in Electronics & Communication Engineering from Kathmandu Engineering College. I have been working as a Software Engineer at Insight Workshop for a year now.
             </p>
-            <p>
-                I believe in blending existence with innovation with vitality to impel striking results. It might be filtering an image that can help in enhancing someone's wellbeing or programming efficient robots to accomplish application-explicit tasks; these domains really excite me as a person.
+            <p> 
+                I believe in blending existence with innovation with vitality to impel striking results. It might be manipulating a medical x-ray image that enhances someone's well being or programming efficient robots to accomplish application-explicit tasks such as self-governing transportation, assisting medical surgery; these domains excite me as a person.
             </p>
             <ul class="list-inline list-social-icons mb-0">
                 <li class="list-inline-item">
