Fix typo in projects section

--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
                     </div>
                     <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
                         <div class="card-body">
-                            Currency Predictor is a Django web application build to learn time series that shows the
+                            Currency Predictor is a Django web application built to learn time series that shows the
                             history of prices for different cryptocurrencies and also predicts their prices in the near
                             future.
                             <p></p>
