--- a/index.html
+++ b/index.html
@@ -47,10 +47,25 @@
     <!-- Custom styles for this template -->
     <link href="css/resume.min.css" rel="stylesheet">
 
+    <style>
+        .page-alerts {
+            margin-bottom: 20px;
+        }
+
+        .page-alerts .page-alert {
+            border-radius: 0;
+            margin-bottom: 0;
+        }
+    </style>
 </head>
 
 <body id="page-top">
-
+<div class="page-alerts">
+    <div class="alert alert-info page-alert text-center" id="alert-2">
+        <strong>Some good news folks!</strong> Checkout my new <a href="http://jashish.com.np/black"
+                                                                  target="_blank"><strong>website version.</strong></a>
+    </div>
+</div>
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <span class="d-block d-lg-none">Ashish's Portfolio</span>
