--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 <body id="page-top">
 <div class="page-alerts">
     <div class="alert alert-info page-alert text-center" id="alert-2">
-        <strong>Some good news folks!</strong> Checkout my new <a href="http://jashish.com.np/black"
-                                                                  target="_blank"><strong>website version.</strong></a>
+        <strong>Some good news folks!</strong> Checkout the new <a href="http://jashish.com.np/black"
+                                                                  target="_blank"><strong>version.</strong></a>
     </div>
 </div>
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
