--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
             <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="http://jashish.com.np/blog" target="_blank">Blog</a>
+            </li>
         </ul>
     </div>
 </nav>
