--- a/index.html
+++ b/index.html
@@ -168,6 +168,19 @@
 
             <div class="resume-item d-flex flex-column flex-md-row mb-5">
                 <div class="resume-content mr-auto">
+                    <h3 class="mb-0">Scientific Applications Programmer</h3>
+                    <div class="subheading mb-3">SocialEyes NP</div>
+                    <ul>
+                        <li>Research on computer vision techniques with transfer learning to detect macular diseases from retinal images</li>
+                    </ul>
+                </div>
+                <div class="resume-date text-md-right">
+                    <span class="text-primary">April 2019 - Present</span>
+                </div>
+            </div>
+
+            <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                <div class="resume-content mr-auto">
                     <h3 class="mb-0">Software Engineer</h3>
                     <div class="subheading mb-3">Insight Workshop</div>
                     <ul>
@@ -179,7 +192,7 @@
                     </ul>
                 </div>
                 <div class="resume-date text-md-right">
-                    <span class="text-primary">April 2018 - Present</span>
+                    <span class="text-primary">April 2018 - April 2019</span>
                 </div>
             </div>
 
