Update description for other experiences

--- a/index.html
+++ b/index.html
@@ -171,7 +171,8 @@
                     <h3 class="mb-0">Scientific Applications Programmer</h3>
                     <div class="subheading mb-3">SocialEyes NP</div>
                     <ul>
-                        <li>Research on computer vision techniques with transfer learning to detect macular diseases from retinal images</li>
+                        <li>Research on computer vision techniques with transfer learning to detect diseases from retinal images targetting macular degeneration</li>
+                        <li>Build a risk analysis matrix dashboard to visualize patient's biometric information</li>
                     </ul>
                 </div>
                 <div class="resume-date text-md-right">
@@ -184,11 +185,9 @@
                     <h3 class="mb-0">Software Engineer</h3>
                     <div class="subheading mb-3">Insight Workshop</div>
                     <ul>
-                        <li>Implement AI & ML algorithms; finding data similarity and eliminating redundant data</li>
-                        <li>Work on data issues found in multi-tenant web applications</li>
-                        <li>Develop web apps in Django & Angular</li>
-                        <li>Work with AWS Services (EC2, RDS, S3, Lambda, etc...)</li>
-                        <li>Work on MySQL server technology for database transactions</li>
+                        <li>Developed the core internal system of a national frozen beverage enterprise in the US inciting a high ground in its space and extending growth rate</li>
+                        <li>Built MVP for a healthcare startup in the US that digitizes real-time health information for patients with IoT and empowers the practitioner-patient relationship</li>
+                        <li>Developed the core internal systems of two similar tech-enabled healthcare services companies that facilitate consumer communication, engagement, and retention throughout the lifecycle of a consumer</li>
                     </ul>
                 </div>
                 <div class="resume-date text-md-right">
@@ -201,8 +200,8 @@
                     <h3 class="mb-0">Machine Learning Engineer Trainee</h3>
                     <div class="subheading mb-3">Insight Workshop</div>
                     <ul>
-                        <li>Worked as a part-time Machine Learning Engineer Trainee</li>
-                        <li>Solved data related problems in web applications (in Python)</li>
+                        <li>Learned & implemented classical machine learning techniques in web applications</li>
+                        <li>Worked on IoT projects related to health monitoring system</li>
                         <li>Worked with AWS Services related to compute and storage</li>
                     </ul>
                 </div>
@@ -235,8 +234,8 @@
                     <h3 class="mb-0">Innovator</h3>
                     <div class="subheading mb-3">National Innovation Center</div>
                     <ul>
-                        <li>Involved in Medical Drone project initiated by Mr. Mahabir Pun</li>
-                        <li>Worked as an Innovator in Software team for Medical Drone</li>
+                        <li>Programmed in C and AVR for stabilization of medical drone using LQR (Linear-Quadratic Regulator) techniques</li>
+                        <li>Customized flight controller for accessible GPS tracking in rural places of Nepal</li>
                     </ul>
                 </div>
                 <div class="resume-date text-md-right">
