Remove page alert for new website

--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
 </head>
 
 <body id="page-top">
-<div class="page-alerts">
+<!-- <div class="page-alerts">
     <div class="alert alert-info page-alert text-center" id="alert-2">
         <strong>Some good news folks!</strong> Checkout <a href="http://jashish.com.np/black"
                                                                   target="_blank"><strong>version 2.0</strong></a>
     </div>
-</div>
+</div> -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <span class="d-block d-lg-none">Ashish's Portfolio</span>
