Add link to new certificate from coursera

--- a/index.html
+++ b/index.html
@@ -440,6 +440,12 @@
             <ul class="fa-ul mb-0">
                 <li>
                     <i class="fa-li fa fa-trophy text-warning"></i>
+                    <a href="https://www.coursera.org/account/accomplishments/certificate/GVPWNNE33UJC" target="_blank">
+                        <b>Certification</b> - Neural Networks and Deep Learning - deeplearning.ai (Coursera)
+                    </a>
+                </li>
+                <li>
+                    <i class="fa-li fa fa-trophy text-warning"></i>
                     Fusemachines <b>AI Scholar 2018</b> - Practical Hands on AI & Deep Learning
                 </li>
                 <li>
