--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <a href="mailto:ashiz2013@gmail.com">ashiz2013@gmail.com</a>
             </div>
             <p class="mb-5">
-                I recently earned my Bachelor's degree focused in Electronics & Communication Engineering from Kathmandu Engineering College. I have been working as a Software Engineer at Insight Workshop for a year now.
+                I recently earned my Bachelor's degree focused in Electronics & Communication Engineering from Kathmandu Engineering College. I have been working as a Software Engineer for a couple of years now.
             </p>
             <p> 
                 I believe in blending existence with innovation with vitality to impel striking results. It might be manipulating a medical x-ray image that enhances someone's well being or programming efficient robots to accomplish application-explicit tasks such as self-governing transportation, assisting medical surgery; these domains excite me as a person.
@@ -180,7 +180,7 @@
                     <h3 class="mb-0">Scientific Applications Programmer</h3>
                     <div class="subheading mb-3">SocialEyes NP</div>
                     <ul>
-                        <li>Research on computer vision techniques with transfer learning to detect diseases from retinal images targetting macular degeneration</li>
+                        <li>Research & implement computer vision techniques with transfer learning to detect diseases from retinal images targetting macular degeneration</li>
                         <li>Build a risk analysis matrix dashboard to visualize patient's biometric information</li>
                     </ul>
                 </div>
@@ -200,7 +200,7 @@
                     </ul>
                 </div>
                 <div class="resume-date text-md-right">
-                    <span class="text-primary">April 2018 - April 2019</span>
+                    <span class="text-primary">April 2018 - May 2019</span>
                 </div>
             </div>
 
