Add UTA to the education list

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <a href="mailto:ashiz2013@gmail.com">ashiz2013@gmail.com</a>
             </div>
             <p class="mb-5">
-                I recently earned my Bachelor's degree focused in Electronics & Communication Engineering from Kathmandu Engineering College. I have been working as a Software Engineer for a couple of years now.
+                I recently earned my Bachelor's degree focused in Electronics & Communication Engineering from Kathmandu Engineering College. I worked as a Software Engineer for a couple of years. Now, I am pursuing Ph.D. in Computer Science at the University of Texas at Arlington (starting August 2019).
             </p>
             <p> 
                 I believe in blending existence with innovation with vitality to impel striking results. It might be manipulating a medical x-ray image that enhances someone's well being or programming efficient robots to accomplish application-explicit tasks such as self-governing transportation, assisting medical surgery; these domains excite me as a person.
@@ -279,6 +279,17 @@
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
         <div class="my-auto">
             <h2 class="mb-5">Education</h2>
+
+            <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                <div class="resume-content mr-auto">
+                    <h3 class="mb-0">University of Texas at Arlington</h3>
+                    <div class="subheading mb-3">Ph.D. in Computer Science</div>
+                    <div>Computer Vision, Human Computer Interaction, Robotics, AI/ML</div>
+                </div>
+                <div class="resume-date text-md-right">
+                    <span class="text-primary">August 2019 - August 2024</span>
+                </div>
+            </div>
 
             <div class="resume-item d-flex flex-column flex-md-row mb-5">
                 <div class="resume-content mr-auto">
