Update experience by adding GTA work

--- a/index.html
+++ b/index.html
@@ -186,6 +186,19 @@
 
             <div class="resume-item d-flex flex-column flex-md-row mb-5">
                 <div class="resume-content mr-auto">
+                    <h3 class="mb-0">Graduate Teaching Assistant</h3>
+                    <div class="subheading mb-3">Computer Science & Engineering, UT Arlington</div>
+                    <ul>
+                        <li>Teaching Assitant for the course CSE 1320 - Intermediate Programming with C</li>
+                    </ul>
+                </div>
+                <div class="resume-date text-md-right">
+                    <span class="text-primary">August 2019 - Present</span>
+                </div>
+            </div>
+
+            <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                <div class="resume-content mr-auto">
                     <h3 class="mb-0">Scientific Applications Programmer</h3>
                     <div class="subheading mb-3">SocialEyes NP</div>
                     <ul>
@@ -194,7 +207,7 @@
                     </ul>
                 </div>
                 <div class="resume-date text-md-right">
-                    <span class="text-primary">April 2019 - Present</span>
+                    <span class="text-primary">April 2019 - July 2019</span>
                 </div>
             </div>
 
