Update address and contact information

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <h1 class="mb-0">Ashish
                 <span class="text-primary">Jaiswal</span>
             </h1>
-            <div class="subheading mb-5">Chabahil · Kathmandu, NP · (986) 004-3739 ·
+            <div class="subheading mb-5">Arlington, Tx, USA · (682) 433-6518 ·
                 <a href="mailto:ashiz2013@gmail.com">ashiz2013@gmail.com</a>
             </div>
             <p class="mb-5">
