--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <a href="mailto:ashiz2013@gmail.com">ashiz2013@gmail.com</a>
             </div>
             <p class="mb-5">
-                I recently earned my Bachelor's degree focused in Electronics & Communication Engineering from Kathmandu Engineering College. I worked as a Software Engineer for a couple of years. Now, I am pursuing my Ph.D. in Computer Science at the University of Texas at Arlington (starting August 2019).
+                I recently earned my Bachelor's degree focused in Electronics & Communication Engineering from Kathmandu Engineering College. I worked as a Software Engineer for a couple of years. Now, I am pursuing my Ph.D. in Computer Science at the University of Texas at Arlington (starting August 2019). I am currently working in Heracleia Human-Centered Computing Lab under the supervision of Prof. Dr. Fillia Makedon. My major interests lie within computer vision and machine learning.
             </p>
             <p> 
                 I believe in blending existence with innovation with vitality to impel striking results. It might be manipulating a medical x-ray image that enhances someone's well being or programming efficient robots to accomplish application-explicit tasks such as self-governing transportation, assisting medical surgery; these domains excite me as a person.
