--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <a href="mailto:ashiz2013@gmail.com">ashiz2013@gmail.com</a>
             </div>
             <p class="mb-5">
-                I recently earned my Bachelor's degree focused in Electronics & Communication Engineering from Kathmandu Engineering College. I worked as a Software Engineer for a couple of years. Now, I am pursuing my Ph.D. in Computer Science at the University of Texas at Arlington (starting August 2019). I am currently working in Heracleia Human-Centered Computing Lab under the supervision of Prof. Dr. Fillia Makedon. My major interests lie within computer vision and machine learning.
+                I recently earned my Bachelor's degree focused in Electronics & Communication Engineering from Kathmandu Engineering College. I worked as a Software Engineer for a couple of years. Now, I am a first year Ph.D. student in Computer Science at the University of Texas at Arlington (starting August 2019). I am currently working in Heracleia Human-Centered Computing Lab at UTA under the supervision of Dr. Fillia Makedon. My major interests lie within computer vision and machine learning.
             </p>
             <p> 
                 I believe in blending existence with innovation with vitality to impel striking results. It might be manipulating a medical x-ray image that enhances someone's well being or programming efficient robots to accomplish application-explicit tasks such as self-governing transportation, assisting medical surgery; these domains excite me as a person.
@@ -399,11 +399,11 @@
                 </li>
                 <li>
                     <i class="fa-li fa fa-check"></i>
-                    Computer Vision and Reinforcement Learning
+                    Python, Django
                 </li>
                 <li>
                     <i class="fa-li fa fa-check"></i>
-                    Python, Django
+                    Computer Vision
                 </li>
                 <li>
                     <i class="fa-li fa fa-check"></i>
@@ -411,7 +411,7 @@
                 </li>
                 <li>
                     <i class="fa-li fa fa-check"></i>
-                    JS (ES5, ES6), jQuery, Angular 5
+                    JS (ES5, ES6), jQuery, Angular TS
                 </li>
                 <li>
                     <i class="fa-li fa fa-check"></i>
@@ -419,7 +419,7 @@
                 </li>
                 <li>
                     <i class="fa-li fa fa-check"></i>
-                    Linux, Nginx Server Setup
+                    Linux, Nginx
                 </li>
                 <li>
                     <i class="fa-li fa fa-check"></i>
@@ -445,8 +445,7 @@
         <div class="my-auto">
             <h2 class="mb-5">Interests</h2>
             <ul class="fa-ul">
-                <li><i class="fa-li fa fa-check-square"></i>Computer Vision & Reinforcement Learning</li>
-                <li><i class="fa-li fa fa-check-square"></i>Deep Learning</li>
+                <li><i class="fa-li fa fa-check-square"></i>Computer Vision & Machine Learning</li>
                 <li><i class="fa-li fa fa-check-square"></i>Robotics</li>
                 <li><i class="fa-li fa fa-check-square"></i>Internet of Things (IoT)</li>
                 <li><i class="fa-li fa fa-check-square"></i>Web Services</li>
