Fix typo in Experience description

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                     <h3 class="mb-0">Graduate Teaching Assistant</h3>
                     <div class="subheading mb-3">Computer Science & Engineering, UT Arlington</div>
                     <ul>
-                        <li>Teaching Assitant for the course CSE 1320 - Intermediate Programming with C</li>
+                        <li>Teaching Assistant for the course CSE 1320 - Intermediate Programming with C</li>
                     </ul>
                 </div>
                 <div class="resume-date text-md-right">
