Update bio information on index page

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <a href="mailto:ashiz2013@gmail.com">ashiz2013@gmail.com</a>
             </div>
             <p class="mb-5">
-                I recently earned my Bachelor's degree focused in Electronics & Communication Engineering from Kathmandu Engineering College. I worked as a Software Engineer for a couple of years. Now, I am a first year Ph.D. student in Computer Science at the University of Texas at Arlington (starting August 2019). I am currently working in Heracleia Human-Centered Computing Lab at UTA under the supervision of Dr. Fillia Makedon. My major interests lie within computer vision and machine learning.
+                I recently earned my Bachelor's degree focused in Electronics & Communication Engineering from Kathmandu Engineering College. I worked as a Software Engineer for the last couple of years. Now, I am a first year Ph.D. student in Computer Science at the University of Texas at Arlington (starting August 2019). I currently work in Heracleia Human-Centered Computing Lab at UTA under the supervision of Prof. Makedon. My major interests lie within computer vision and machine learning.
             </p>
             <p> 
                 I believe in blending existence with innovation with vitality to impel striking results. It might be manipulating a medical x-ray image that enhances someone's well being or programming efficient robots to accomplish application-explicit tasks such as self-governing transportation, assisting medical surgery; these domains excite me as a person.
@@ -202,8 +202,8 @@
                     <h3 class="mb-0">Scientific Applications Programmer</h3>
                     <div class="subheading mb-3">SocialEyes NP</div>
                     <ul>
-                        <li>Research & implement computer vision techniques with transfer learning to detect diseases from retinal images targetting macular degeneration</li>
-                        <li>Build a risk analysis matrix dashboard to visualize patient's biometric information</li>
+                        <li>Researched & implemented computer vision techniques with transfer learning to detect diseases from retinal images targetting macular degeneration</li>
+                        <li>Built a risk analysis matrix dashboard to visualize patient's biometric information</li>
                     </ul>
                 </div>
                 <div class="resume-date text-md-right">
