Add papers section to the website along with PETRA paper

--- a/index.html
+++ b/index.html
@@ -119,7 +119,10 @@
                 <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="http://jashish.com.np/blog" target="_blank">Blog</a>
+                <a class="nav-link js-scroll-trigger" href="#papers">Papers</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="https://jashish.com.np/blog" target="_blank">Blog</a>
             </li>
         </ul>
     </div>
@@ -764,6 +767,24 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <!-- Papers Section -->
+    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="papers">
+        <div class="my-auto">
+            <h2 class="mb-5">Papers</h2>
+            <ul class="fa-ul mb-0">
+                <li>
+                    <i class="fa-li fa fa-book"></i>
+                    <i>Farnaz Farahanipad, Harish Ram Nambiappan, <b>Ashish Jaiswal</b>, Maria Kyrarini, and Fillia Makedon</i>, <b>HandReha: Dynamic
+                        Hand Gesture Recognition for Game-based Wrist Rehabilitation</b> 
+                    <a href="/files/papers/HandReha_Dynamic_Hand_Gesture_Recognition_for_Game_based_Wrist_Rehabilitation-PETRA 2020.pdf" target="_blank">
+                        [PETRA 2020]
+                    </a>
+                </li>
+            </ul>
+
         </div>
     </section>
 
