--- a/index.html
+++ b/index.html
@@ -128,6 +128,13 @@
     </div>
 </nav>
 
+<div class="alert alert-primary alert-dismissible fade show announcement-top-bar" role="alert">
+    <p class="d-none d-md-block">To check out my writings, <a href="https://jashish.com.np/blog" target="_blank">click here!</a></p>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+    </button>
+</div>
+
 <div class="container-fluid p-0">
 
     <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
@@ -471,6 +478,12 @@
         <div class="my-auto">
             <h2 class="mb-5">Awards &amp; Certifications</h2>
             <ul class="fa-ul mb-0">
+                <li>
+                    <i class="fa-li fa fa-trophy text-warning"></i>
+                    <a href="https://uta.engineering/innovationday/project.php?p=2&h=e44283fa45abdc0bc57e28b40ff3a7e9" target="_blank">
+                        <b>Fellowship</b> - Graduate L3/Harris Award for Innovation from L3/Harris
+                    </a>
+                </li>
                 <li>
                     <i class="fa-li fa fa-trophy text-warning"></i>
                     <a href="https://www.coursera.org/account/accomplishments/certificate/GVPWNNE33UJC" target="_blank">
