--- a/index.html
+++ b/index.html
@@ -146,11 +146,11 @@
                 <a href="mailto:ashiz2013@gmail.com">ashiz2013@gmail.com</a>
             </div>
             <p class="mb-5">
-                I earned my Bachelor's degree focused in Electronics & Communication Engineering from Kathmandu Engineering College. I worked as a Software Engineer for a couple of years. Currently, I am a first year Ph.D. student in Computer Science at the University of Texas at Arlington (August 2019 - Present). I work in Heracleia Human-Centered Computing Lab at UTA under the supervision of Prof. Fillia Makedon. My major interests lie within computer vision and machine learning.
+                I am a first-year Ph.D. student in Computer Science at UT Arlington. I currently work under Prof. Makedon in vision projects with machine learning that involve human activity recognition, video analysis, etc to automate systems that assess people with different cognitive abilities.
             </p>
-            <p> 
+<!--             <p> 
                 I believe in blending existence with innovation with vitality to impel striking results. It might be manipulating a medical x-ray image that enhances someone's well being or programming efficient robots to accomplish application-explicit tasks such as self-governing transportation, assisting medical surgery; these domains excite me as a person.
-            </p>
+            </p> -->
             <ul class="list-inline list-social-icons mb-0">
                 <li class="list-inline-item">
                     <a href="https://facebook.com/asheeshcric" target="_blank">
