Update paper link

--- a/index.html
+++ b/index.html
@@ -792,7 +792,7 @@
                     <i class="fa-li fa fa-book"></i>
                     <i>Farnaz Farahanipad, Harish Ram Nambiappan, <b>Ashish Jaiswal</b>, Maria Kyrarini, and Fillia Makedon</i>, <b>HandReha: Dynamic
                         Hand Gesture Recognition for Game-based Wrist Rehabilitation</b> 
-                    <a href="/files/papers/HandReha_Dynamic_Hand_Gesture_Recognition_for_Game_based_Wrist_Rehabilitation-PETRA 2020.pdf" target="_blank">
+                    <a href="https://dl.acm.org/doi/10.1145/3389189.3392608" target="_blank">
                         [PETRA 2020]
                     </a>
                 </li>
