--- a/index.html
+++ b/index.html
@@ -790,10 +790,9 @@
             <ul class="fa-ul mb-0">
                 <li>
                     <i class="fa-li fa fa-book"></i>
-                    <i>Farnaz Farahanipad, Harish Ram Nambiappan, <b>Ashish Jaiswal</b>, Maria Kyrarini, and Fillia Makedon</i>, <b>HandReha: Dynamic
-                        Hand Gesture Recognition for Game-based Wrist Rehabilitation</b> 
+                    Farahanipad, F.*, Nambiappan, H.R.*, Jaiswal, A., Kyrarini, M. and Makedon, F., 2020, June. HAND-REHA: Dynamic Hand Gesture Recognition for Game-based Wrist Rehabilitation. In <i>Proceedings of the 13th ACM International Conference on PErvasive Technologies Related to Assistive Environments</i> (pp. 1-9). *Equal Contribution
                     <a href="https://dl.acm.org/doi/10.1145/3389189.3392608" target="_blank">
-                        [PETRA 2020]
+                        [pdf]
                     </a>
                 </li>
             </ul>
