Make my name bold on paper listing

--- a/index.html
+++ b/index.html
@@ -790,7 +790,7 @@
             <ul class="fa-ul mb-0">
                 <li>
                     <i class="fa-li fa fa-book"></i>
-                    Farahanipad, F.*, Nambiappan, H.R.*, Jaiswal, A., Kyrarini, M. and Makedon, F., 2020, June. HAND-REHA: Dynamic Hand Gesture Recognition for Game-based Wrist Rehabilitation. In <i>Proceedings of the 13th ACM International Conference on PErvasive Technologies Related to Assistive Environments</i> (pp. 1-9). *Equal Contribution
+                    Farahanipad, F.*, Nambiappan, H.R.*, <b>Jaiswal, A.</b>, Kyrarini, M. and Makedon, F., 2020, June. HAND-REHA: Dynamic Hand Gesture Recognition for Game-based Wrist Rehabilitation. In <i>Proceedings of the 13th ACM International Conference on PErvasive Technologies Related to Assistive Environments</i> (pp. 1-9). *Equal Contribution
                     <a href="https://dl.acm.org/doi/10.1145/3389189.3392608" target="_blank">
                         [pdf]
                     </a>
