--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="#papers">Papers</a>
+                <a class="nav-link js-scroll-trigger" href="#papers">Publications</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="https://jashish.com.np/blog" target="_blank">Blog</a>
@@ -786,8 +786,16 @@
     <!-- Papers Section -->
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="papers">
         <div class="my-auto">
-            <h2 class="mb-5">Papers</h2>
+            <h2 class="mb-5">Publications</h2>
             <ul class="fa-ul mb-0">
+                <li>
+                    <i class="fa-li fa fa-book"></i>
+                    Babu, A.R., Zadeh, M.Z., <b>Jaiswal, A.</b>, Lueckenhoff, A., Kyrarini, M., and Makedon, F., 2020. A Multi-modal System to Assess Cognition in Children from their Physical Movements. In <i>Proceedings of the 2020 International Conference on Multimodal Interaction (ICMI '20). ACM.</i> (accepted)
+                    <!-- <a href="" target="_blank">
+                        [pdf]
+                    </a> -->
+                </li>
+
                 <li>
                     <i class="fa-li fa fa-book"></i>
                     Farahanipad, F.*, Nambiappan, H.R.*, <b>Jaiswal, A.</b>, Kyrarini, M. and Makedon, F., 2020, June. HAND-REHA: Dynamic Hand Gesture Recognition for Game-based Wrist Rehabilitation. In <i>Proceedings of the 13th ACM International Conference on PErvasive Technologies Related to Assistive Environments</i> (pp. 1-9). *Equal Contribution
